zerocopy-derive/tests/ui-stable/union_into_bytes_cfg/union_into_bytes_cfg.stderr
error: use of deprecated trait `Deprecated`
  --> /zerocopy-derive/tests/ui-stable/union_into_bytes_cfg/union_into_bytes_cfg.rs:29:6
   |
29 | impl Deprecated for Foo {}
   |      ^^^^^^^^^^
   |
note: the lint level is defined here
  --> /zerocopy-derive/tests/ui-stable/union_into_bytes_cfg/union_into_bytes_cfg.rs:14:9
   |
14 | #![deny(deprecated)]
   |         ^^^^^^^^^^

warning: union `Foo` is never used
  --> /zerocopy-derive/tests/ui-stable/union_into_bytes_cfg/union_into_bytes_cfg.rs:25:7
   |
25 | union Foo {
   |       ^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

